[fixup] move cluster name into endpoints response
- address review comments
