# management-api-server/src/main/java/com/datastax/mgmtapi/resources/MetadataResources.java
@@ -102,20 +102,4 @@ public class MetadataResources extends BaseResources {
           return Response.ok(featureSet).build();
         });
   }
-
-  @GET
-  @Path("/clustername")
-  @Operation(summary = "Returns the Cassandra cluster name", operationId = "getClusterName")
-  @Produces(MediaType.TEXT_PLAIN)
-  @ApiResponse(
-      responseCode = "200",
-      description = "Cassandra Cluster Name",
-      content =
-          @Content(
-              mediaType = MediaType.TEXT_PLAIN,
-              schema = @Schema(implementation = String.class),
-              examples = @ExampleObject(value = "myCluster")))
-  public Response getClusterName() {
-    return executeWithStringResponse("CALL NodeOps.getClusterName()");
-  }
 }
